2005-05-24 00:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassInspector.gorm: Added link to
	invoke selectAction: when an action is selected, also added link
	to invoke selectOutlet: when an outlet is selected.
	* GormCore/GormClassInspector.m: Addition of two new actions
	selectAction: and selectOutlet:

2005-05-22 00:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correction for outline view
	resize issues in switchView.

2005-05-21 13:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormPrefGeneral.gorm: Make the top switch off. 
	* GormCore/GormClassEditor.m: Added code in switchView
	to properly resize the view so that it doesn't shrink when switching
	between the outline and browser.
	* GormPrefs/GormGeneralPref.m: Correct problem setting the
	radio button.

2005-05-21 11:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormPrefGeneral.gorm: Added oulets/actions for
	matrix to choose outline or browser view.
	* GormCore/GormClassEditor.h: Added forward declaration for
	NSBrowser.
	* GormCore/GormClassEditor.m: Added new private methods and
	also added code to existing methods to handle the browser view.
	* GormCore/GormClassManager.m: Removed artificial returning of
	NSObject in subClassesOf: and allSubclassesOf: so that it's now
	possible to all root classes when querying for "nil".
	* GormCore/GormFilePrefsManager.m: Updated version.
	* GormInfo.plist: Updated version.
	* GormPrefs/GormGeneralPref.h: Added interfaceMatrix and classesAction:
	* GormPrefs/GormGeneralPref.m: Implemented classesAction.
	* Resources/Defaults.plist: Added new default so that the user's 
	preference for the classes view is stored.

2005-05-19 23:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.9.10
	
2005-05-07 06:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: In handleNotification: reset selection owner to 