@@ -19,7 +19,8 @@
 #   
 #   You should have received a copy of the GNU General Public License
 #   along with this program; if not, write to the Free Software
-#   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA
+#   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02111 
+#   USA.
 #
 
 # ADDITIONAL_OBJCFLAGS += -Wall -Werror
